--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,11 @@
 Header.H1{
     text-align: center;
 }
+.card-container{
+    flex: auto;
+}
+.card{
+    border: solid #333 2px;
+    border-radius: 5px;
+
+}
