--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,12 @@ Header.H1{
     text-align: center;
 }
 .card-container{
-    flex: auto;
+    display: flex;
+    flex-direction: row;
 }
 .card{
     border: solid #333 2px;
     border-radius: 5px;
-
+    flex: 1 1 auto;
+    flex-wrap: wrap;
 }
